# Math

./: .clang-format  CMakeLists.txt  MinimizeTask.cpp  MinimizeTask.h  README.md  main.cpp
.github/workflows/: allSituations.yml  gtests.yml
Optimizers/: GradientMethod.cpp  GradientMethod.h  GradientOptimizer.h
SimpleMath/: Function.h  Matrix.h
headers/: ErrorFunction.h  ErrorFunctions.h  Function.h  LSMFORLMTask.h  LSMTask.h  Matrix.h  Task.h  TaskF.h
headers/Optimizers/: GradientOptimizer.h  LMForTest.h  LevenbergMarquardtSolver.h  NewtonGaussSolver.h  NewtonOptimizer.h  Optimizer.h
headers/Tasks/: Task.h
headers/Tasks/Eigen/: LSMFORLMTask.h  TaskEigen.h
headers/Tasks/Matrix/: LSMTask.h  TaskF.h
headers/Tasks/base/: Task.h
headers/core/: ErrorFunction.h  Function.h
headers/decomposition/: QR.h  SparseQR.h
headers/decomposition/ordering/: SparseQrColamd.h
headers/graph/: Graph.h  GraphObjects.h  InheritanceGraph.h  Politicians.h
headers/linear_algebra/: Matrix.h  SparseMatrix.h
headers/optimizers/: GradientOptimizer.h  LMForTest.h  LMWithSparse.h  LevenbergMarquardtSolver.h  NewtonGaussSolver.h  NewtonOptimizer.h  Optimizer.h
headers/optimizers/EigenOptimizers/: LMForTest.h  LMWithSparse.h  StochasticGradientOptimizer.h
headers/optimizers/MatrixOptimizers/: GradientOptimizer.h  LevenbergMarquardtSolver.h  MatrixOptimizer.h
headers/optimizers/base/: Optimizer.h
headers/optimizers/eigen/: AdamOptimizer.h  EigenOptimizer.h  LMForTest.h  LMWithSparse.h
headers/optimizers/matrix/: NewtonGaussSolver.h  NewtonOptimizer.h
headers/optimizers/matrix/sparse/: SparseDogLegSolver.h  SparseLevenbergMarquardtSolver.h  SparseNewtonGaussSolver.h  SparseNewtonSolver.h
headers/tasks/eigen/: TaskEigen.h
headers/tasks/matrix/: LSMTask.h  SparseLSMTask.h  SparseSystemTask.h  TaskMatrix.h
src/: AdamOptimizer.cc  ErrorFunctions.cc  ErrorFunctions.cpp  Function.cc  Function.cpp  Function.cс  GradientOptimizer.cc  GradientOptimizer.cpp  GradientOptimizer.cс  LevenbergMarquardtSolver.cc  LevenbergMarquardtSolver.cpp  NewtonGaussSolver.cc  NewtonGaussSolver.cpp  NewtonOptimizer.cc  NewtonOptimizer.cpp  QR.cc  QR.cpp  SparseQR.cc
src/core/: Function.cc
src/decomposition/: SparseQR.cc
src/optimizers/eigen/: StochasticGradientOptimizer.cc
src/optimizers/matrix/: LevenbergMarquardtSolver.cc  NewtonOptimizer.cc
src/optimizers/matrix/sparse/: SparseDogLegSolver.cc  SparseLevenbergMarquardtSolver.cc  SparseNewtonGaussSolver.cc  SparseNewtonSolver.cc
tests/: AdamOptimizerTest.cc  CMakeLists.txt  ErrorFunctionsTests.cc  ErrorFunctionsTests.cpp  FunctionTest.cc  FunctionTest.cpp  GradientOptimizerTest.cc  GradientOptimizerTest.cpp  LMTest.cc  LMTest.cpp  LSMTaskTest.cc  LSMTaskTest.cpp  NewtonGaussSolverTests.cc  NewtonGaussSolverTests.cpp  NewtonOptimizerTest.cpp  OurLMTest.cc  QRPerformanceTests.cpp  SGDOptimizerTest.cc  SparseMatrixComparisonTests.cc  SparseMatrixTests.cc  SparseQRPerformanceTests.cc  SparseQRTests.cc  TaskTest.cc  TaskTest.cpp  TestsMatrix.cpp  TestsQR.cc  TestsQR.cpp  graphgtests.cc  graphgtests.cpp
tests/core/: FunctionTest.cc
tests/decomposition/: QRPerformanceTests.cc  SparseQRPerformanceTests.cc  SparseQRTests.cc  SparseQrColamdTests.cc
tests/linear_algebra/: SparseMatrixComparisonTests.cc  SparseMatrixTests.cc  TestsMatrix.cc
tests/optimizers/eigen/: AdamOptimizerTest.cc
tests/optimizers/matrix/: GradientOptimizerTest.cc  LMTest.cc  NewtonGaussSolverTests.cc  NewtonOptimizerTest.cc  SparseDogLegSolverTest.cc  SparseLMComparisonPerformanceTests.cc  SparseLevenbergMarquardtSolverTest.cc  SparseNewtonGaussSolverTest.cc  SparseNewtonSolverTest.cc
tests/tasks/: LSMTaskTest.cc
